content: wiki-page maintenance — frontmatter cleanup + News log + 2 new pages
Strip deprecated typed-relations frontmatter (removed 2026-05-02), tighten
summaries/tags across 149 pages. Append AdminTable phase commits to
News.md. Add IntegrationTestingStrategies and UnitTestingBestPractices.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>